fix alignment of btn elements in join newsletter btn

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -453,6 +453,12 @@ body {
 }
 
 .btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 0.5rem;
   border: 2px solid white;
   border-top: 2px solid rgba(137, 137, 137, 0.45);
   border-left: 2px solid rgba(137, 137, 137, 0.45);
